# smarts-bio-cli

./: Cargo.toml  README.md  dist-workspace.toml  publish.md
.github/workflows/: release.yml
crates/smarts-cli/: Cargo.toml
crates/smarts-cli/src/: chat.rs  localopen.rs  main.rs  mcp_install.rs  output.rs
crates/smarts-client/: Cargo.toml
crates/smarts-client/src/: auth.rs  client.rs  config.rs  credentials.rs  error.rs  lib.rs  models.rs  resources.rs
crates/smarts-mcp/: Cargo.toml
crates/smarts-mcp/src/: lib.rs
