[workspace]
resolver = "2"
members = [
    "crates/smarts-client",
    "crates/smarts-cli",
    "crates/smarts-mcp",
]

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/smartsbio/smarts-bio-cli"
homepage = "https://smarts.bio"
rust-version = "1.82"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-std", "io-util", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
futures-util = "0.3"
directories = "5"
toml = "0.8"
# Linux uses the pure-Rust zbus secret-service backend (async-secret-service +
# async-io), NOT sync-secret-service — the latter pulls libdbus (a C lib) which
# isn't on CI and won't statically link for musl. crypto-rust avoids OpenSSL.
keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "windows-native",
    "async-secret-service",
    "async-io",
    "crypto-rust",
] }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
comfy-table = "7"
indicatif = "0.17"
mime_guess = "2"
webbrowser = "1"
rustyline = "14"
tiny_http = "0.12"
urlencoding = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
