[package]
name = "smarts-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust client for the smarts.bio public API gateway"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures-util.workspace = true
directories.workspace = true
toml.workspace = true
keyring.workspace = true
mime_guess.workspace = true
